--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "http-status": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
